@@ -1,3 +1,9 @@
+2002-08-06  Adam Fedor  <fedor@gnu.org>
+
+	* Source/NSString.m (-getLineStart:end:contentsEnd:forRange:):
+	Change location of start of end char search (Patch from Pete
+	French).
+
 2002-07-27  Adam Fedor  <fedor@gnu.org>
 
 	* Version: 1.4.0
